few cosmetic code changes